# life-engine

./: .hindent.yaml  CHANGELOG.md  README.md  cabal.project.freeze  hie.yaml  life-engine.cabal
app/: Main.hs
src/: Common.hs  Engine.hs  Organisms.hs  Types.hs  Utilities.hs
