cabal-version:      2.4
name:               life-engine
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             metafates
maintainer:         fates@duck.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:
        src
    ghc-options: -Wall -fno-warn-type-defaults -O2
    default-language: Haskell2010
    other-modules:
        Paths_life_engine,
        Types,
        Utilities,
        Common,
        Organisms
    exposed-modules:
        Engine
    build-depends:   
        base ^>=4.14.3.0,
        text,
        containers,
        random,
        codeworld-api


executable life-engine
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    other-modules:
        Paths_life_engine
    build-depends:
        base ^>=4.14.3.0,
        codeworld-api,
        text,
        containers,
        random,
        life-engine

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
